--- a/data/applications.json
+++ b/data/applications.json
@@ -208,5 +208,37 @@
         "status": "accepted",
         "response_date": "2025-07-28T11:18:35.945345",
         "response_message": "Application accepted"
+    },
+    {
+        "job_id": 7,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 8,
+        "applicant_name": "Mahesh gupta",
+        "applicant_phone": "9878473445",
+        "applicant_email": "mahesh@gmail.com",
+        "applicant_skills": "Security Guard",
+        "applicant_experience": "2-5 years",
+        "expected_salary": 15000,
+        "id": 13,
+        "applied_date": "2025-07-29T19:41:18.308983",
+        "status": "pending"
+    },
+    {
+        "job_id": 6,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 14,
+        "applied_date": "2025-07-30T11:44:44.908055",
+        "status": "pending"
     }
 ]
