--- a/data/applications.json
+++ b/data/applications.json
@@ -223,7 +223,9 @@
         "expected_salary": 15000,
         "id": 13,
         "applied_date": "2025-07-29T19:41:18.308983",
-        "status": "pending"
+        "status": "accepted",
+        "response_date": "2025-07-31T18:26:27.501251",
+        "response_message": "Accepted"
     },
     {
         "job_id": 6,
@@ -239,6 +241,38 @@
         "expected_salary": 15000,
         "id": 14,
         "applied_date": "2025-07-30T11:44:44.908055",
+        "status": "pending"
+    },
+    {
+        "job_id": 9,
+        "job_title": "House cleaner",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 15,
+        "applied_date": "2025-07-31T12:25:07.922178",
+        "status": "pending"
+    },
+    {
+        "job_id": 7,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 16,
+        "applied_date": "2025-07-31T12:31:37.735625",
         "status": "pending"
     }
 ]
