--- a/data/applications.json
+++ b/data/applications.json
@@ -241,7 +241,9 @@
         "expected_salary": 15000,
         "id": 14,
         "applied_date": "2025-07-30T11:44:44.908055",
-        "status": "pending"
+        "status": "accepted",
+        "response_date": "2025-08-03T18:23:37.731098",
+        "response_message": "Accepted"
     },
     {
         "job_id": 9,
@@ -257,7 +259,9 @@
         "expected_salary": 15000,
         "id": 15,
         "applied_date": "2025-07-31T12:25:07.922178",
-        "status": "pending"
+        "status": "accepted",
+        "response_date": "2025-08-03T18:23:40.152973",
+        "response_message": "Accepted"
     },
     {
         "job_id": 7,
@@ -273,6 +277,170 @@
         "expected_salary": 15000,
         "id": 16,
         "applied_date": "2025-07-31T12:31:37.735625",
-        "status": "pending"
+        "status": "accepted",
+        "response_date": "2025-08-03T18:23:41.531113",
+        "response_message": "Accepted"
+    },
+    {
+        "job_id": 8,
+        "job_title": "Plumber",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 17,
+        "applied_date": "2025-08-03T15:29:47.736870",
+        "status": "accepted",
+        "response_date": "2025-08-03T18:23:42.862502",
+        "response_message": "Accepted"
+    },
+    {
+        "job_id": 10,
+        "job_title": "House cleaner",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 18,
+        "applied_date": "2025-08-03T15:29:50.207698",
+        "status": "accepted",
+        "response_date": "2025-08-03T18:23:44.329403",
+        "response_message": "Accepted"
+    },
+    {
+        "job_id": 11,
+        "job_title": "Security guard",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 19,
+        "applied_date": "2025-08-03T15:29:51.146793",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:45.849514",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 12,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 20,
+        "applied_date": "2025-08-03T15:29:53.556169",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:46.709566",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 13,
+        "job_title": "Babysitter",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 21,
+        "applied_date": "2025-08-03T15:29:54.676190",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:47.806545",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 16,
+        "job_title": "Cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 22,
+        "applied_date": "2025-08-03T15:29:57.151691",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:49.525783",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 17,
+        "job_title": "mechanic",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 23,
+        "applied_date": "2025-08-03T15:29:58.348864",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:50.653955",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 14,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 24,
+        "applied_date": "2025-08-03T15:30:00.939719",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:53.631808",
+        "response_message": "Rejected"
+    },
+    {
+        "job_id": 15,
+        "job_title": "Cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 4,
+        "applicant_name": "Naivedyasingh",
+        "applicant_phone": "9111439303",
+        "applicant_email": "Naivedyasingh25@gmail.com",
+        "applicant_skills": "Security Guard, Plumber, Gardener",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 25,
+        "applied_date": "2025-08-03T15:30:04.963453",
+        "status": "rejected",
+        "response_date": "2025-08-03T18:23:55.038514",
+        "response_message": "Rejected"
     }
 ]
