--- a/data/applications.json
+++ b/data/applications.json
@@ -442,5 +442,263 @@
         "status": "rejected",
         "response_date": "2025-08-03T18:23:55.038514",
         "response_message": "Rejected"
+    },
+    {
+        "job_id": 1,
+        "job_title": "Electricican",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 26,
+        "applied_date": "2025-08-29T16:49:10.841048",
+        "status": "pending"
+    },
+    {
+        "job_id": 2,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 27,
+        "applied_date": "2025-08-29T16:49:13.502991",
+        "status": "pending"
+    },
+    {
+        "job_id": 3,
+        "job_title": "cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 28,
+        "applied_date": "2025-08-29T16:49:16.487861",
+        "status": "pending"
+    },
+    {
+        "job_id": 5,
+        "job_title": "Maid",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 29,
+        "applied_date": "2025-08-29T16:49:18.941278",
+        "status": "pending"
+    },
+    {
+        "job_id": 4,
+        "job_title": "cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 30,
+        "applied_date": "2025-08-29T16:49:22.169802",
+        "status": "pending"
+    },
+    {
+        "job_id": 6,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 31,
+        "applied_date": "2025-08-29T16:49:25.311996",
+        "status": "pending"
+    },
+    {
+        "job_id": 7,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 32,
+        "applied_date": "2025-08-29T16:49:28.683703",
+        "status": "pending"
+    },
+    {
+        "job_id": 8,
+        "job_title": "Plumber",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 33,
+        "applied_date": "2025-08-29T16:49:32.083273",
+        "status": "pending"
+    },
+    {
+        "job_id": 9,
+        "job_title": "House cleaner",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 34,
+        "applied_date": "2025-08-29T17:17:21.935302",
+        "status": "pending"
+    },
+    {
+        "job_id": 1,
+        "job_title": "Electricican",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 10,
+        "applicant_name": "Naman rawat",
+        "applicant_phone": "8762323289",
+        "applicant_email": "Naman@gmail.com",
+        "applicant_skills": "Security Guard",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 35,
+        "applied_date": "2025-08-29T17:24:51.962609",
+        "status": "pending"
+    },
+    {
+        "job_id": 2,
+        "job_title": "Driver",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 10,
+        "applicant_name": "Naman rawat",
+        "applicant_phone": "8762323289",
+        "applicant_email": "Naman@gmail.com",
+        "applicant_skills": "Security Guard",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 36,
+        "applied_date": "2025-08-29T17:24:55.546848",
+        "status": "pending"
+    },
+    {
+        "job_id": 10,
+        "job_title": "House cleaner",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 37,
+        "applied_date": "2025-08-29T17:26:02.721268",
+        "status": "pending"
+    },
+    {
+        "job_id": 3,
+        "job_title": "cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 10,
+        "applicant_name": "Naman rawat",
+        "applicant_phone": "8762323289",
+        "applicant_email": "Naman@gmail.com",
+        "applicant_skills": "Security Guard",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 38,
+        "applied_date": "2025-08-29T17:40:33.127051",
+        "status": "pending"
+    },
+    {
+        "job_id": 4,
+        "job_title": "cook",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 10,
+        "applicant_name": "Naman rawat",
+        "applicant_phone": "8762323289",
+        "applicant_email": "Naman@gmail.com",
+        "applicant_skills": "Security Guard",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 39,
+        "applied_date": "2025-08-29T17:40:43.129572",
+        "status": "pending"
+    },
+    {
+        "job_id": 19,
+        "job_title": "no",
+        "employer_id": 1,
+        "employer_name": "Home",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 40,
+        "applied_date": "2025-08-29T17:50:29.908423",
+        "status": "pending"
+    },
+    {
+        "job_id": 1,
+        "job_title": "Gym cleaning",
+        "employer_id": 12,
+        "employer_name": "Ayush tech private limited",
+        "applicant_id": 11,
+        "applicant_name": "rama  rana",
+        "applicant_phone": "9873842942",
+        "applicant_email": "rama@gmail.com",
+        "applicant_skills": "Gardener, Plumber, Security Guard, Babysitter, Other",
+        "applicant_experience": "Fresher",
+        "expected_salary": 15000,
+        "id": 41,
+        "applied_date": "2025-08-29T17:51:19.375358",
+        "status": "accepted",
+        "response_date": "2025-08-29T17:51:27.150650",
+        "response_message": "Accepted"
     }
 ]
